# rm_version2023

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hik_camera/lib/hik_camera/: hik_camera_node
install/hik_camera/share/hik_camera/: local_setup.sh  package.bash  package.sh  (+1 more)
install/rm_detector/include/: armor.hpp  detector.hpp  detector_node.hpp  pnp_solver.hpp
install/rm_tracker/include/: extended_kalman_filiter.hpp  tracker.hpp
log/: latest_build
src/hik_camera_node/: CMakeLists.txt
src/hik_camera_node/launch/: hik_node.launch.py
src/hik_camera_node/src/: hik_node.cpp
src/rm_detector/: CMakeLists.txt
src/rm_detector/config/: detector.yaml
src/rm_detector/include/: number_classifier.hpp
src/rm_detector/launch/: armor_detector.launch.py
src/rm_detector/src/: armor.cpp  detector.cpp  detector_node.cpp  number_classifier.cpp  pnp_solver.cpp
src/rm_msg_interfaces/: CMakeLists.txt
src/rm_msg_interfaces/msg/: Armors.msg
src/rm_serial/: CMakeLists.txt  package.xml
src/rm_serial/include/: rm_serial_node.hpp
src/rm_serial/src/: rm_serial_node.cpp
src/rm_tracker/: CMakeLists.txt
src/rm_tracker/config/: tracker.yaml
src/rm_tracker/include/: extended_kalman_filiter.hpp  tracker.hpp  tracker_node.hpp
src/rm_tracker/src/: extended_kalman_filiter.cpp  tracker.cpp  tracker_node.cpp
src/ros2_video_node/: CMakeLists.txt
src/ros2_video_node/config/: node_params.yaml
src/ros2_video_node/launch/: video_node.launch.py
src/ros2_video_node/src/: video_node.cpp
src/start_directory/: CMakeLists.txt
(+131 files in other folders)
